-*- coding: utf-8; fill-column: 68 -*-


=======
CHANGES
=======
0.5.0rc4
========
- mssql
    - Lots of cleanup and fixes to correct problems with
      limit and offset.

    - Correct situation where subqueries as part of a
      binary expression need to be translated to use the
      IN and NOT IN syntax.

0.5.0rc3
========
- features
- orm
    - Added two new hooks to SessionExtension:
      after_bulk_delete() and after_bulk_update().
      after_bulk_delete() is called after a bulk delete()
      operation on a query. after_bulk_update() is called 
      after a bulk update() operation on a query.

- sql
    - SQL compiler optimizations and complexity
      reduction. The call count for compiling a
      typical select() construct is 20% less versus
      0.5.0rc2.

    - Dialects can now generate label names of adjustable
      length. Pass in the argument "label_length=<value>" to
      create_engine() to adjust how many characters max will
      be present in dynamically generated column labels, i.e.
      "somecolumn AS somelabel". Any value less than 6 will
      result in a label of minimal size, consiting of an
      underscore and a numeric counter. The compiler uses the
      value of dialect.max_identifier_length as a default.
      [ticket:1211]

- ext
    - Added a new extension sqlalchemy.ext.serializer.
      Provides Serializer/Deserializer "classes" which mirror
      Pickle/Unpickle, as well as dumps() and loads(). This
      serializer implements an "external object" pickler
      which keeps key context-sensitive objects, including
      engines, sessions, metadata, Tables/Columns, and
      mappers, outside of the pickle stream, and can later
      restore the pickle using any engine/metadata/session
      provider. This is used not for pickling regular object
      instances, which are pickleable without any special
      logic, but for pickling expression objects and full
      Query objects, such that all mapper/engine/session