@@ -14,6 +14,9 @@ CHANGES
       binary expression need to be translated to use the
       IN and NOT IN syntax.
 
+    - Fixed E Notation issue that prevented the ability to
+      insert decimal values less than 1E-6. [ticket:1216]
+
 0.5.0rc3
 ========
 - features
